--- a/src/app/features/vacunaciones/components/campana-form/campana-form.component.html
+++ b/src/app/features/vacunaciones/components/campana-form/campana-form.component.html
@@ -21,6 +21,8 @@
   </form>
   <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-3 gap-2 pt-4 mt-auto flex-shrink-0">
     <button type="button" (click)="cancel.emit()" class="btn-secondary w-full sm:w-auto">Cancelar</button>
-    <button type="button" (click)="onSubmit()" [disabled]="campanaForm.invalid" class="btn-primary disabled:opacity-50 w-full sm:w-auto">Siguiente: Cargar Animales</button>
+    <button type="button" (click)="onSubmit()" [disabled]="campanaForm.invalid" class="btn-primary disabled:opacity-50 w-full sm:w-auto">
+      {{ editMode ? 'Guardar Cambios' : 'Siguiente: Cargar Animales' }}
+    </button>
   </div>
 </div>
