fix: Corregir importaciÃ³n de ModalComponent en campana-detail
- Cambiar ReusableModalComponent por ModalComponent existente
- Actualizar ruta de importaciÃ³n correcta
- Agregar propiedad size='xl' al modal
- Soluciona error de compilaciÃ³n TS2307 y TS-991010

--- a/src/app/features/vacunaciones/components/campana-detail/campana-detail.component.html
+++ b/src/app/features/vacunaciones/components/campana-detail/campana-detail.component.html
@@ -104,9 +104,10 @@
 </div>
 
 <!-- Modal de Edición de Campaña -->
-<app-reusable-modal 
+<app-modal 
   [isOpen]="isEditModalOpen" 
   [title]="'Modificar Campaña'" 
+  [size]="'xl'"
   (close)="isEditModalOpen = false">
   <app-campana-form 
     [campana]="campana" 
@@ -114,5 +115,5 @@
     (save)="onSaveEdit($event)"
     (cancel)="isEditModalOpen = false">
   </app-campana-form>
-</app-reusable-modal>
+</app-modal>
 
